2006-09-03 Borut Razem <borut.razem AT siol.net>

	* sdcc.spec: corrected for 2.6.0. Thanks to Christer Weinigel.

2006-09-03 Raphael Neider <rneider AT web.de>

	* src/pic/ralloc.c,
	* src/pic/pcode.c (InitReuseRegs): allocate registers with pseudo
	  indices >= 0x1000 to disambiguate them from fixed regs __at(addr),
	  fixes #1550049

2006-09-01 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/cmd.src/cmdutil.cc: #include <sys/time.h> and <unistd.h>
	  to make ppc-osx happy

2006-08-31 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/cmd.src/newcmdposix.cc: #include <assert.h>
	* sim/ucsim/cmd.src/newcmd.cc: #include <ctype.h>
	* sim/ucsim/cmd.src/newcmd.cc: #include <ctype.h>
	* support/regression/ports/ds390/spec.mk,
	  support/regression/ports/mcs51/spec.mk,
	  support/regression/ports/xa51/spec.mk: introduced DEV_NULL variable.
	  To run regression tests in mingw environment:
	  make DEV_NULL=NUL CC=gcc

2006-08-30 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/cmd.src/newcmdposix.cc, sim/ucsim/cmd.src/newcmdposixcl.h,
	  sim/ucsim/cmd.src/newcmdwin32.cc, sim/ucsim/cmd.src/newcmdwin32cl.h,
	  sim/ucsim/app.cc, sim/ucsim/appcl.h, sim/ucsim/configure,
	  sim/ucsim/configure.in, sim/ucsim/ddconfig_in.h, sim/ucsim/error.cc,
	  sim/ucsim/errorcl.h, sim/ucsim/option.cc, sim/ucsim/optioncl.h,
	  sim/ucsim/utils.cc, sim/ucsim/utils.h, sim/ucsim/cmd.src/Makefile.in,
	  sim/ucsim/avr.src/avr.cc, sim/ucsim/avr.src/avrcl.h,
	  sim/ucsim/cmd.src/bp.cc, sim/ucsim/cmd.src/bpcl.h,
	  sim/ucsim/cmd.src/cmdconf.cc, sim/ucsim/cmd.src/cmdgui.cc,
	  sim/ucsim/cmd.src/cmdmem.cc, sim/ucsim/cmd.src/cmdset.cc,
	  sim/ucsim/cmd.src/cmdsetcl.h, sim/ucsim/cmd.src/cmdstat.cc,
	  sim/ucsim/cmd.src/cmduc.cc, sim/ucsim/cmd.src/cmduccl.h,
	  sim/ucsim/cmd.src/cmdutil.cc, sim/ucsim/cmd.src/cmdutil.h,
	  sim/ucsim/cmd.src/command.cc, sim/ucsim/cmd.src/commandcl.h,
	  sim/ucsim/cmd.src/get.cc, sim/ucsim/cmd.src/getcl.h,
	  sim/ucsim/cmd.src/info.cc, sim/ucsim/cmd.src/newcmd.cc,